tests/k8s_testcases/example_policies/demo/sanity/sanity-scheme.yaml
namespaceList: ../../../example_podlist/ns_list.json
podList: ../../../example_podlist/pods_list.json

networkConfigList:
  - name: sanity-label-mistake
    networkPolicyList:
      - sanity-label-mistake-networkpolicy.yaml
    expectedWarnings: 2

  - name: sanity-typoNotIn
    networkPolicyList:
      - sanity-typoNotIn-networkpolicy.yaml
    expectedWarnings: 1

  - name: sanity-redundant-dash
    networkPolicyList:
      - sanity-redundant-dash-networkpolicy.yaml
    expectedWarnings: 0

  - name: sanity-misconception-podSelector-namespaceSelector
    networkPolicyList:
      - sanity-misconception-podSelector-namespaceSelector.yaml
    expectedWarnings: 0

queries:
  - name: emptiness_test_on_label_mistake
    emptiness:
      - sanity-label-mistake
    expected: 1

  - name: redundancy_test_on_typoNotIn
    redundancy:
      - sanity-typoNotIn
    expected: 1

  - name: vacuity_test_on_redundant-dash-typo
    vacuity:
      - sanity-redundant-dash
    expected: 1

  - name: redundancy_test_on_misconception_podSelector-namespaceSelector
    redundancy:
      - sanity-misconception-podSelector-namespaceSelector
    expectedOutput: ../../../expected_output/redundancy-test-on-misconception-podSelector-namespaceSelector.txt
    expected: 2

  - name: redundancy_test_on_misconception_podSelector-namespaceSelector_yaml
    redundancy:
      - sanity-misconception-podSelector-namespaceSelector
    outputConfiguration:
      outputFormat: yaml
    expectedOutput: ../../../expected_output/redundancy-test-on-misconception-podSelector-namespaceSelector.yaml
    expected: 2

  - name: redundancy_test_on_misconception_podSelector-namespaceSelector_json
    redundancy:
      - sanity-misconception-podSelector-namespaceSelector
    outputConfiguration:
      outputFormat: json
    expectedOutput: ../../../expected_output/redundancy-test-on-misconception-podSelector-namespaceSelector.json
    expected: 2
